--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
-
+<script src="/src/assets/static/js/jquery.min.js"></script>
+<!-- <script src="/src/assets/static/js/echarts-gl.min.js"></script> -->
 <style>
   body {
   box-sizing: border-box;
